# Orion-Downloader

./: CORREÇÕES_IMPLEMENTADAS.md  README.md  gradle.properties  gradlew  settings.gradle.kts
.github/workflow/: Build.yml  build.yml
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  download_engine.cpp  download_engine.h  jni_bridge.cpp
app/src/main/java/com/orion/downloader/: MainActivity.kt  OrionApplication.kt
app/src/main/java/com/orion/downloader/core/: DownloadEngine.kt  HttpDownloadEngine.kt  NativeDownloadEngine.kt
app/src/main/java/com/orion/downloader/model/: DownloadItem.kt
app/src/main/java/com/orion/downloader/service/: DownloadService.kt
app/src/main/java/com/orion/downloader/ui/component/: AddDownloadDialog.kt
app/src/main/java/com/orion/downloader/ui/screen/: BrowserScreen.kt  DownloadsScreen.kt  MainScreen.kt  SettingsScreen.kt
app/src/main/java/com/orion/downloader/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/orion/downloader/util/: NotificationHelper.kt  StorageHelper.kt
app/src/main/java/com/orion/downloader/viewmodel/: DownloadViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
